# variadic-macros-2

./: CMakeLists.txt  main.cc
